Center welcome text; require UTF-8 encoding

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 
 <head>
 
+<meta charset="utf-8">
+
 <title>Vincents Seite</title>
 
 <link rel="stylesheet" href="style.css">
@@ -46,7 +48,7 @@
 
 <div id="portrait"><img src="foto.png"></div>
 
-<p>Ahoi und willkommen auf meiner Seite! &nbsp; <span><img style="height: 1.5em; margin-bottom: -0.4em" src="rainbow-flag.png"></span></p>
+<p style="text-align: center">Ahoi und willkommen auf meiner Seite! &nbsp; <span><img style="height: 1.5em; margin-bottom: -0.4em" src="rainbow-flag.png"></span></p>
 
 </div>
 
