Add alt attribute to image

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 <h1 style="text-align: center">Webseite von Vincent Westenberg</h1>
 
-<div id="portrait"><img src="foto.png"></div>
+<div id="portrait"><img src="foto.png" alt="Portrait photo"></div>
 
 <p style="text-align: center">Ahoi und willkommen auf meiner Seite! &nbsp; <span><img style="height: 1.5em; margin-bottom: -0.4em" src="rainbow-flag.png"></span></p>
 
