Some code improvements

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 
 <head>
 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <meta charset="utf-8">
 
 <title>Vincents Seite</title>
@@ -11,26 +13,6 @@
 <link rel="stylesheet" href="style.css">
 
 <link rel="icon" href="favicon.png">
-
-<style>
-
-#portrait {
-    width: 300px;
-    height: 300px;
-    text-align: center;
-    overflow: hidden;
-    border-radius: 100%;
-    margin-top: 2em;
-    margin-bottom: 2em;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-#portrait img {
-    width: 100%;
-}
-
-</style>
 
 </head>
 
@@ -46,9 +28,11 @@
 
 <h1 style="text-align: center">Webseite von Vincent Westenberg</h1>
 
-<div id="portrait"><img src="foto.png" alt="Portrait photo"></div>
+<div style="text-align: center">
+<img src="foto.png" width="300px" height="300px" alt="Portrait photo" style="border-radius: 100%">
+</div>
 
-<p style="text-align: center">Ahoi und willkommen auf meiner Seite! &nbsp; <span><img style="height: 1.5em; margin-bottom: -0.4em" src="rainbow-flag.png"></span></p>
+<p style="text-align: center">Ahoi und willkommen auf meiner Seite! &nbsp; <img style="height: 1.5em; margin-bottom: -0.4em" src="rainbow-flag.png"></p>
 
 </div>
 
