--- a/impressum.html
+++ b/impressum.html
@@ -4,6 +4,8 @@
 
 <head>
 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <meta charset="utf-8">
 
 <title>Impressum</title>
@@ -16,7 +18,9 @@
 
 <body>
 
-<div id="header"><a href="index.html">zurück</a></div>
+<div id="header">
+<a href="index.html">zurück</a>
+</div>
 
 <div id="content">
 
